ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2022-10-17
    • 140
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      We invariant that the assertion thrown during checkpointing had to be a shutdown error. But now that we take locks before taking checkpoints, we can also get interruption errors. We'll need to add the case to the invariant too.

      Before that, we'll need to make sure if it's safe to relax the constraint of the invariant.

            Assignee:
            Yuhong Zhang
            Reporter:
            Yuhong Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: