SERVER-70213 Handle interruption errors from lock acquisitions when taking checkpoints